<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="lj.justdeliver.fragments.NameNumberFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/placeholder"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp"
        app:civ_border_overlay="true"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"/>


    <lj.justdeliver.helper.AppEditText
        android:id="@+id/etFullName"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_full_name"
        android:inputType="textPersonName"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"/>


    <lj.justdeliver.helper.AppEditText
        android:id="@+id/etPhone"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contact_number"
        android:inputType="phone"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etFullName"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_bias="0.0"/>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/btnEmailNext"
            style="@style/AppButtonBorderlessBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/next"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"/>

    </RelativeLayout>

    <ProgressBar
        style="@android:style/Widget.Material.Light.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbImageUpload"
        app:layout_constraintTop_toTopOf="@+id/profile_image"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintLeft_toLeftOf="@+id/profile_image"
        app:layout_constraintRight_toRightOf="@+id/profile_image"
        android:visibility="gone"/>


</android.support.constraint.ConstraintLayout>
